<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.luisburgos.temperatureconverter.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="3"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txv_degrees" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/editTextDegrees"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal|numberSigned"/>

    </LinearLayout>

    <LinearLayout
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txv_result" />

        <EditText
            android:enabled="false"
            android:id="@+id/editTextResult"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroupDegrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:checked="true"
                android:id="@+id/radioCelsius"
                android:text="@string/txv_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radioFahrenheit"
                android:text="@string/txv_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:textColor="@color/colorAccent"
        android:id="@+id/buttonConvert"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btn_convert"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="150dp"
        android:layout_height="50dp" />


</LinearLayout>
